# claude-code-available-tools

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.it.md  README.md  SECURITY.it.md  SECURITY.md  install.bat  install.sh  pyproject.toml
.github/workflows/: ci.yml
badges/: test-badge.json
doc_progetto/: ctools-spec.md
docs/: ARCHITECTURE.it.md  ARCHITECTURE.md
installers/: install_linux.sh  install_macos.sh  install_windows.ps1
slash-command/: tools.md
src/cctools/: __init__.py  __main__.py  cli.py  inline.py  scanner.py  terminal.py  tui.py
src/ctools/: __init__.py  __main__.py  cli.py  inline.py  scanner.py  terminal.py  tui.py
tests/: conftest.py  test_cli.py  test_inline.py  test_scanner.py  test_terminal.py  test_tui.py
tests/fixtures/home-claude/: claude-legacy.json  settings.json
tests/fixtures/home-claude/agents/: reviewer.md
tests/fixtures/home-claude/commands/: simple.md  with-fm.md
tests/fixtures/home-claude/commands/namespace/: cmd.md
tests/fixtures/home-claude/skills/valid-skill/: SKILL.md
tests/fixtures/project-claude/: .mcp.json
tests/fixtures/project-claude/.claude/: settings.json
tests/fixtures/project-claude/.claude/commands/: local-cmd.md
