[project]
name = "ctools"
version = "1.0.0"
description = "Interactive explorer for Claude Code tools and configuration"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.80.0",
    "rich>=13.7.0",
]

[project.scripts]
ctools = "ctools.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov", "mypy", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ctools"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
